--- a/css/custom/style.css
+++ b/css/custom/style.css
@@ -3,6 +3,37 @@
     height:20px ;
     width: 20px;
 }
+/* cart view */
+/* .data-hover{
+    border:none;
+    background:#2125294c;
+} */
+/* #hello{
+    display:none;
+}
+#hello:target{
+    display:block;
+} */
+/* .cart-view img{
+    position:relative;
+} */
+.cart-all{
+    width:30%;
+    float:right;
+    padding:10px;
+    display:none;
+    background-color:#232526a1;
+}
+.cart-all p{
+    color:rgb(255, 248, 248);
+    margin-top: 5px;
+    font-size:10px;
+}
+/* .cart-view img:hover +.cart-all{
+    
+    margin-top:10px;
+    display:block;
+} */
 /* header resize */
 .head{
     margin-top:10px;
@@ -127,7 +158,7 @@
 }
 .cart-items img{
     width: 100%;
-    height: 110px;
+    height: 100%;
 }
 .anchor-style a{
     text-decoration:none;
