--- a/css/custom/style.css
+++ b/css/custom/style.css
@@ -93,9 +93,10 @@ display:flex;
 }
 /* card style */
 .card-text-style{
+    
     color:gray;
     font-size:11px;
-    height: 15px;
+    height: 30px;
 }
 .sale{
     position: relative;
@@ -152,6 +153,7 @@ display:flex;
     color:rgb(255, 255, 255);
 }
 .price-style{
+    margin-bottom: -10px;
     color:gray;
 }
 /* 5 star */
