--- a/css/custom/index.css
+++ b/css/custom/index.css
@@ -6,11 +6,20 @@
 .cart-items-number{
     position: relative;
 }
+.cart-size p{
+    text-align: center;
+    width:20px;
+    padding:2px;
+    font-weight: 500;
+    color:black;
+    border-radius:100%;
+    background-color:rgba(131, 125, 125, 0.207);
+}
 @media only screen and (max-width: 575px) {
     .cart-items-number .show-number{
         position: absolute;
         top:0%;
-        left:5%
+        left:3%
     }
     .pop-large-image img{
         width:100%;
@@ -39,7 +48,7 @@
 .cart-items-number .show-number{
     position: absolute;
     top:0%;
-    right:-10%
+    right:-20%
 }
 /* carousel */
 .ccb img{
@@ -62,6 +71,16 @@
     height: 5px;
     border-radius: 100%;
     background-color: #000000;
+}
+.carousel-control-next{
+    margin:auto;
+    height:10%;
+    width:10%;
+}
+.carousel-control-prev{
+    margin:auto;
+    height:10%;
+    width:10%;
 }
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
@@ -135,6 +154,7 @@
 /* new man collection */
 .new-man img{
     width:100%;
+    height: 200px;;
 }
 .new-man p{
     font-size: 13px;
@@ -215,4 +235,52 @@ height: 100px;
 .copyright img{
     height: 15px;
     width:15px;
+}
+/* mini cart */
+#nothing{
+    display:none;
+    color:#fff;
+}
+.mini-cart{
+display:flex;
+}
+.mini-cart-button{
+    padding:10px;
+}
+.mini-cart img{
+    margin-bottom: 5px;
+    margin-right:5px;
+    height:65px;
+    width:60px;
+}
+.mini-cart-details{
+    margin-top:-15px;
+    padding:2px
+}
+.mini-cart-details p{
+ padding:0;
+ margin:0px;
+ font-size:8px!important;
+}
+.cart-all{
+    margin-top: -50px;
+    width:300px;
+    padding:10px;
+    display:none;
+    background-color:rgba(62, 40, 40, 0.639);
+}
+.cart-all p{
+    color:rgb(255, 248, 248);
+    margin-top: 5px;
+    font-size:10px;
+}
+.head .cart-all{
+    position:absolute;
+    top: 0%;
+    right: 0%;
+    
+}
+.head{
+    position: relative;
+   
 }
