--- a/css/custom/singleproduct.css
+++ b/css/custom/singleproduct.css
@@ -233,7 +233,11 @@ height: 450px;
 /* review */
 .review input::placeholder{
     color:white;
-    margin-left:15px;
+    padding-left:5px;
+}
+.review textarea::placeholder{
+    color:white;
+    padding-left:5px;
 }
 .review input,textarea{
     margin-bottom:15px;
