--- a/css/custom/checkout.css
+++ b/css/custom/checkout.css
@@ -1,4 +1,7 @@
 /* icon style */
+.social-head a{
+    margin-right:8px;
+}
 .icon-style img{
     height:20px ;
     width: 20px;
@@ -19,7 +22,7 @@
     right: 0%;
     font-size:12px;
     font-weight: bold;
-    color:red;
+    color:rgb(255, 255, 255);
 }
 #nothing{
     display:none;
@@ -66,6 +69,23 @@ display:flex;
     position: relative;
     margin-top:10px;
     margin-bottom:10px;
+}
+.cart-all a{
+    margin-left:70%;;
+}
+.btn-cart{
+    border: none;
+    color: rgba(255, 255, 255, 0.734);
+    border-radius: 1px;
+    background-color:rgba(49, 220, 98, 0.686);
+    outline: none!important;
+}
+.btn-remove{
+    outline: none!important;
+    border: none;
+    color: rgba(255, 255, 255, 0.666);
+    border-radius: 1px;
+    background-color:rgb(235, 12, 12);
 }
 /* social link style */
 .social{
