--- a/css/custom/account.css
+++ b/css/custom/account.css
@@ -55,6 +55,15 @@ display:flex;
     display:none;
     background-color:rgba(62, 40, 40, 0.639);
 }
+.cart-all h6{
+    text-align: center;
+}
+.cart-size p{
+    text-align: center;
+    border-radius: 100%;
+    width:15px;
+    background-color:rgb(146, 134, 134);
+}
 .cart-all p{
     color:rgb(255, 248, 248);
     margin-top: 5px;
@@ -153,7 +162,7 @@ display:flex;
     color:white;
 }
 .list li{
-    margin-left:0px;
+    margin-left:-20px;
     font-size:12px;
 }
 .content h5{
