--- a/css/custom/checkout.css
+++ b/css/custom/checkout.css
@@ -49,6 +49,12 @@ display:flex;
  margin:0px;
  font-size:8px!important;
 }
+.cart-size p{
+    text-align: center;
+    border-radius: 100%;
+    width:15px;
+    background-color:rgb(146, 134, 134);
+}
 .cart-all{
     width:300px;
     padding:10px;
@@ -59,6 +65,9 @@ display:flex;
     color:rgb(255, 248, 248);
     margin-top: 5px;
     font-size:10px;
+}
+.cart-all h6{
+    text-align: center;
 }
 .head .cart-all{
     position:absolute;
@@ -204,7 +213,7 @@ display:flex;
     color:white;
 }
 .list li{
-    margin-left:0px;
+    margin-left:-20px;
     font-size:12px;
 }
 .content h5{
