--- a/css/custom/singleproduct.css
+++ b/css/custom/singleproduct.css
@@ -16,6 +16,12 @@
     }
 
 }
+.cart-size p{
+    text-align: center;
+    border-radius: 100%;
+    width:15px;
+    background-color:rgb(146, 134, 134);
+}
 .cart-items-number .show-number{
     position:absolute;
     top: 0%;
@@ -54,6 +60,9 @@ display:flex;
     padding:10px;
     display:none;
     background-color:rgba(62, 40, 40, 0.639);
+}
+.cart-all h6{
+    text-align: center;
 }
 .cart-all p{
     color:rgb(255, 248, 248);
@@ -288,7 +297,7 @@ height: 450px;
     color:white;
 }
 .list li{
-    margin-left:0px;
+    margin-left:-20px;
     font-size:12px;
 }
 .content h5{
