--- a/css/custom/store.css
+++ b/css/custom/store.css
@@ -56,6 +56,9 @@ display:flex;
     display:none;
     background-color:rgba(62, 40, 40, 0.639);
 }
+.cart-all h6{
+    text-align: center;
+}
 .cart-all p{
     color:rgb(255, 248, 248);
     margin-top: 5px;
@@ -88,6 +91,13 @@ display:flex;
     border-radius: 1px;
     background-color:rgb(235, 12, 12);
 }
+.cart-size p{
+    text-align: center;
+    border-radius: 100%;
+    width:15px;
+    background-color:rgb(146, 134, 134);
+}
+
 /* social link style */
 .social{
     margin-left: 5px;;
@@ -109,6 +119,18 @@ display:flex;
     color:gray;
 }
 /* items style */
+.convert{
+    margin-bottom:5px;
+    border-radius: 3px;
+    padding:5px;
+    border: 1px solid rgba(0, 0, 0, 0.207);
+}
+.convert a{
+    color: rgba(0, 0, 0, 0.659);
+}
+.items select{
+    margin-bottom: 5px;
+}
 .items{
     margin-bottom: 20px;
     text-align: center;
@@ -209,7 +231,7 @@ display:flex;
 }
 .cart-items img{
     width: 100%;
-    height: 100%;
+    height: 120px;
 }
 .cross{
     border-radius: 3px;
@@ -289,7 +311,7 @@ margin-bottom: 20px;
     color:white;
 }
 .list li{
-    margin-left:0px;
+    margin-left:-20px;
     font-size:12px;
 }
 .content h5{
