--- a/css/custom/store.css
+++ b/css/custom/store.css
@@ -120,17 +120,23 @@ display:flex;
 }
 /* items style */
 .convert{
+    margin: auto;
+    width:50%;
     text-align: center;
     margin-bottom:5px;
     border-radius: 3px;
     padding:5px;
-    border: 1px solid rgba(0, 0, 0, 0.207);
+    border: 1px solid rgba(0, 0, 0, 0.131);
 }
 .convert #desc{
     display: none;
 }
 .convert #asc{
     display: block;
+}
+.convert img{
+    width:30px;
+    height:20px!important;
 }
 .convert button{
     background-color:rgba(255, 0, 0, 0);
