--- a/css/custom/campaign.css
+++ b/css/custom/campaign.css
@@ -112,175 +112,8 @@ display:flex;
     margin-top:20px;
     margin-bottom:50px;
 }
-/* show wishlist */
-.bImg img{
-width:100%;
-height: 450px;
-}
-.Simg img{
-    border: 1px solid rgba(82, 5, 47, 0.138);;
-    margin-top: 15px;
-    width:100%;
-    height: 75px;
-    margin-bottom: 20px;
-}
-.bImg{
-    position: relative;
-}
-.bImg .zoom{
-    position: absolute;
-    bottom:-4%;
-}
-.zoom{
-    text-align: center;
-    width: 100%;
-    height: 50px;
-    background-color:rgba(0, 0, 0, 0.295);
-}
-.zoom img{
-    margin-top:15px;
-    width: 25px;
-    height: 25px;
-}
-/* related product */
-.related img{
-    margin-top:15px;
-    width:100%;
-    height:200px;
-}
-.related p{
-    font-size: 13px;
-    margin:0px;
-}
-.single{
-    margin-left:0;
-    width:20%;
-}
-.anchor{
-    color: black;
-    text-decoration: underline;
-}
-/* color */
-.color button{
-    margin-bottom:10px;
-    border:none;
-    margin-right:20px;
-    width:20px;
-    height:20px;
-}
-.c1{
-    background-color: black;;
-}
-.c2{
-    background-color: rgb(208, 22, 186);;
-}
-.c3{
-    background-color: rgb(25, 223, 91);;
-}
-/* size */
-.size button{
-    margin-bottom:10px;
-    border:none;
-    margin-right:20px;
-    width:30px;
-    height:30px;
-    background-color:rgba(128, 128, 128, 0.44);
-}
-/* quantity */
-.quantity{
-    border-radius:2px;
-    width: 13%;
-    border:1px solid rgba(0, 0, 0, 0.193);
-    margin-bottom: 10px;
-}
-/* button */
-.add button{
-    width:100%;
-    font-size:15px;
-}
-.add img{
-    margin-right:5px;
-    height:15px;
-    width:15px;
-}
-.btn-color{
-    color:white;
-    background-color: rgba(73, 22, 22, 0.72);
-}
-/* info */
-.info p{
-    font-weight:500;
-    margin: 0;
-}
-.info span{
-    font-weight:400;
-    color:rgb(192, 190, 190);
-}
-/* share */
-.share{
-    margin-top:10px;
-    font-weight:500;
-}
-.share img{
-    margin-left: 7px;
-    width:15px;
-    height:15px;
-}
-/* people review */
-.review-button button{
-    outline:none;
-    color:rgba(0, 0, 0, 0.522);
-    background:none;
-    border:none;
-    padding: 5px;
-}
-.date img{
-    width:20px!important;
-    height:20px!important;
-}
-.review-button button:hover{
-    color:black;
-}
-.rev-hr{
-    margin-top:0;
-    margin-bottom:30px;
-}
-.people-review img{
-    border-radius: 100%;
-    width:80%;
-    height:70%;
-}
-.text-review{
-    margin-bottom: 20px;
-}
-.text-review p{
-    margin: 0;
-}
-/* review */
-.review input::placeholder{
-    color:white;
-    padding-left:5px;
-}
-.review textarea::placeholder{
-    color:white;
-    padding-left:5px;
-}
-.review input,textarea{
-    margin-bottom:15px;
-    width:100%;
-}
-.bg input{
-    border:none;
-    background-color:rgba(60, 20, 20, 0.72);
-    color:white;
-    text-align:left;
-    border-radius: 2px;
-}
-.bgg input,textarea{
-    border:none;
-    background-color:rgba(29, 26, 26, 0.275);
-    border-radius: 2px;
-}
+/* contact us */
+
 /* footer */
 .footer{
     margin-top: 60px;
